--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: labs_ios
+name: task_manager
 description: "labs_ios"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
+  uuid: ^3.0.4
+  shared_preferences: ^2.0.0
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
