--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.3
   uuid: ^3.0.6
   dartz: ^0.10.0-nullsafety.3
+  dio: ^4.0.0
   drift: ^2.0.0
   path_provider: ^2.0.0
   sqflite: ^2.0.0
